Set up Jacoco build stage in pom.xml